...
    }
  }

  /// Opções de porte
  static const List<String> porteOptions = [
    'Até 10 funcionários',
    '11 a 50 funcionários',
    '51 a 100 funcionários',
    '101 a 500 funcionários',
    'Acima de 500 funcionários',
  ];

  @override
...
